--- a/server/views/pages/courtAppearance/check-next-hearing-answers.njk
+++ b/server/views/pages/courtAppearance/check-next-hearing-answers.njk
@@ -70,6 +70,7 @@
                 }) }}
 
             <form method="post">
+                <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 <div class="govuk-button-group">
                     <button type="submit"
                             class="govuk-button"
